modified:   data/flask_app/app.py renamed:    data/flask_app/models/scaler_out_mn.pkl -> data/flask_app/models/scaler_out_mn1.pkl renamed:    data/flask_app/models/scaler_out_pr.pkl -> data/flask_app/models/scaler_out_mn2.pkl renamed:    data/flask_app/models/scaler_out_upr.pkl -> data/flask_app/models/scaler_out_pr1.pkl new file:   data/flask_app/models/scaler_out_pr2.pkl new file:   data/flask_app/models/scaler_out_upr1.pkl new file:   data/flask_app/models/scaler_out_upr2.pkl modified:   data/flask_app/templates/mn.html modified:   data/flask_app/templates/pr.html modified:   vkr.ipynb

--- a/data/flask_app/templates/pr.html
+++ b/data/flask_app/templates/pr.html
@@ -25,7 +25,7 @@
             <div><label for="seg">Содержание эпоксидных групп,%_2:</label><input type="float" name="seg" required></div>
             <div><label for="tv">Температура вспышки, С_2:</label><input type="float" name="tv" required></div>
             <div><label for="pp">Поверхностная плотность, г/м2:</label><input type="float" name="pp" required></div>
-            <div><label for="mup">Модуль упругости при растяжении, ГПа:</label><input type="float" name="mup" required></div>
+            <div><label for="mupr">Модуль упругости при растяжении, ГПа:</label><input type="float" name="mupr" required></div>
             <div><label for="ps">Потребление смолы, г/м2:</label><input type="float" name="ps" required></div>
             <div><label for="shn">Шаг нашивки:</label><input type="float" name="shn" required></div>
             <div><label for="pln">Плотность нашивки:</label><input type="float" name="pln" required></div>
