modified:   data/flask_app/app.py modified:   data/flask_app/static/style.css modified:   data/flask_app/static/style2.css modified:   data/flask_app/templates/mn.html modified:   data/flask_app/templates/pr.html modified:   data/flask_app/templates/upr.html

--- a/data/flask_app/templates/mn.html
+++ b/data/flask_app/templates/mn.html
@@ -8,8 +8,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='style2.css') }}">
     </head>
 
-
-    <h1 style="font-size:40px;" align="center">Рекомендация соотношения матрица-наполнитель</h1>
+    <h1 align="center">Рекомендация соотношения матрица-наполнитель</h1>
     
     <video poster="/static/images/11.jpg" autoplay playsinline muted loop>
         <source src="/static/images/AjarJaggedClumber2.webm" type="video/webm">
