--- a/data/flask_app/templates/upr.html
+++ b/data/flask_app/templates/upr.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='style2.css') }}">
     </head>
 
-    <h1 style="font-size:40px;" align="center">Расчет модуля упругости при растяжении</h1>
+    <h1 align="center">Расчет модуля упругости при растяжении</h1>
     
     <video poster="/static/images/11.jpg" autoplay playsinline muted loop>
         <source src="/static/images/AjarJaggedClumber2.webm" type="video/webm">
