Поправил немного интерфейс

--- a/data/flask_app/templates/pr.html
+++ b/data/flask_app/templates/pr.html
@@ -34,7 +34,7 @@
         </fieldset>
         </form>
 
-        <div style="padding-left:10px;" class="result" align="left">
+        <div class="result" align="left">
             {% if message %}
                 <br><b><div>{{message}}</div></b>
             {% endif %}
