--- a/data/flask_app/templates/mn.html
+++ b/data/flask_app/templates/mn.html
@@ -35,7 +35,7 @@
         </fieldset>   
         </form>
 
-        <div style="padding-left:12px;" class="result" align="left">
+        <div class="result" align="left">
             {% if message %}
                 <br><b><div>{{message}}</div></b>
             {% endif %}
