--- a/data/flask_app/templates/upr.html
+++ b/data/flask_app/templates/upr.html
@@ -37,7 +37,7 @@
         </form>
 
 
-        <div style="padding-left:10px;" class="result" align="left">
+        <div class="result" align="left">
             {% if message %}
                 <br><b><div>{{message}}</div></b>
             {% endif %}
