modified:   data/flask_app/app.py modified:   data/flask_app/static/style2.css modified:   data/flask_app/templates/mn.html modified:   data/flask_app/templates/pr.html modified:   data/flask_app/templates/upr.html

--- a/data/flask_app/templates/mn.html
+++ b/data/flask_app/templates/mn.html
@@ -35,7 +35,7 @@
         </fieldset>   
         </form>
 
-        <div class="result" align="left">
+        <div class="result" align="center">
             {% if message %}
                 <br><b><div>{{message}}</div></b>
             {% endif %}
